# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  sergsm-github-io-index.html
page_loader/: __init__.py  cli.py  main.py  regexer.py  sergsm-github-iopage-loader.html
page_loader/scripts/: page_loader.py
page_loader/services/: html_handler.py  names.py  regexer.py  requester.py
tests/: test_download.py
tests/fixtures/: sergsm-github-io-index.html  sergsm-github-io.html
