[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Download a page from the Internet!"
authors = ["SergSm <smirnovserg.s@gmail.com>"]
license = "MIT"

packages = [
    {include = "page_loader"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"