[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Download a page from the Internet!"
authors = ["SergSm <smirnovserg.s@gmail.com>"]
license = "MIT"
packages = [
    {include = "page_loader"},
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
requests-mock = "^1.8.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]